--- a/assets_land/css/responsive.css
+++ b/assets_land/css/responsive.css
@@ -447,13 +447,26 @@
     .preloader .spinner {
         margin: 60% auto;
     }
+    
+    /*Ivanildo*/
+    nav.navbar.bootsnav {
+        background-color: rgba(4, 20, 30, 1);
+        border-bottom: 0;
+        z-index: 9;
+    }
+
+    .logo {
+        margin-top: -9px;
+    }
+    /*Fim*/
+
     nav.navbar.bootsnav .navbar-toggle {
         background-color: transparent;
         color: #fff;
     }
     nav.navbar.bootsnav .navbar-collapse.collapse.in,
     nav.navbar.bootsnav .navbar-collapse.collapsing {
-        background-color: #1c1c1c;
+        background-color: rgba(4, 20, 30, 1);
     }
     .attr-nav > ul > li > a {
         padding: 5px 15px!important;
