--- a/assets_land/css/bootstrap.css
+++ b/assets_land/css/bootstrap.css
@@ -1316,7 +1316,7 @@ mark,
   text-align: right;
 }
 .text-center {
-  text-align: center;
+  text-align: center !important;
 }
 .text-justify {
   text-align: justify;
@@ -1774,6 +1774,7 @@ pre code {
 .col-xs-offset-0 {
   margin-left: 0;
 }
+
 @media (min-width: 768px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
