Alteração do numero para contato via whatsapp e criação deu uma classe para mostrar o icone do whatsapp quando etiver em modo responsivel

--- a/assets_land/css/style.css
+++ b/assets_land/css/style.css
@@ -263,6 +263,10 @@ blockquote {
     margin: 6px 0 0;
 }
 
+.whatsappvisible {
+    display: none;
+}
+
 /*-------------------------------------------------------------------------------
     Preloader
 ---------------------------------------------------------------------------------*/
