--- a/assets_land/css/responsive.css
+++ b/assets_land/css/responsive.css
@@ -479,6 +479,10 @@ Criado por Ivanildo Ferreira 08/11/2021
     margin-top: -50px;
 }
 
+.whatsappvisible {
+    display: block;
+}
+
 }
 
 /*==============================================================
